-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P5
-
Affects Version/s: 8u112, 9
-
Component/s: hotspot
-
b120
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8188617 | 8u172 | David Buck | P5 | Resolved | Fixed | b01 |
| JDK-8190604 | 8u171 | David Buck | P5 | Resolved | Fixed | b01 |
| JDK-8187316 | 8u162 | David Buck | P5 | Resolved | Fixed | b01 |
| JDK-8198057 | emb-8u171 | David Buck | P5 | Resolved | Fixed | b01 |
Java 9 debug build(build 1.9.0-ea-fastdebug-b48) on Linux-x64 platform hit assertion when run with "-XX:-UseLoopCounter" option. Running following command cause a crash:
java -XX:-UseLoopCounter
Got following output:
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/templateTable_x86_64.cpp:1612
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/HUDSON/workspace/9-2-build-linux-amd64/jdk9/2121/hotspot/src/cpu/x86/vm/templateTable_x86_64.cpp:1612), pid=23991, tid=140547934127872
# assert(UseLoopCounter || !UseOnStackReplacement) failed: on-stack-replacement requires loop counters
#
# JRE version: (9.0-b48) (build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-ea-fastdebug-b48 mixed mode linux-amd64 compressed oops)
# Core dump written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c" (or dumping to /home/dmitry/bundles/jdk9/b48/fastdebug/bin/core.23991)
#
# An error report file with more information is saved as:
# /home/dmitry/bundles/jdk9/b48/fastdebug/bin/hs_err_pid23991.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
....
java -version:
java version "1.9.0-ea-fastdebug"
Java(TM) SE Runtime Environment (build 1.9.0-ea-fastdebug-b48)
Java HotSpot(TM) 64-Bit Server VM (build 1.9.0-ea-fastdebug-b48, mixed mode)
java -XX:-UseLoopCounter
Got following output:
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/templateTable_x86_64.cpp:1612
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/HUDSON/workspace/9-2-build-linux-amd64/jdk9/2121/hotspot/src/cpu/x86/vm/templateTable_x86_64.cpp:1612), pid=23991, tid=140547934127872
# assert(UseLoopCounter || !UseOnStackReplacement) failed: on-stack-replacement requires loop counters
#
# JRE version: (9.0-b48) (build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-ea-fastdebug-b48 mixed mode linux-amd64 compressed oops)
# Core dump written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c" (or dumping to /home/dmitry/bundles/jdk9/b48/fastdebug/bin/core.23991)
#
# An error report file with more information is saved as:
# /home/dmitry/bundles/jdk9/b48/fastdebug/bin/hs_err_pid23991.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
....
java -version:
java version "1.9.0-ea-fastdebug"
Java(TM) SE Runtime Environment (build 1.9.0-ea-fastdebug-b48)
Java HotSpot(TM) 64-Bit Server VM (build 1.9.0-ea-fastdebug-b48, mixed mode)
- backported by
-
JDK-8187316 Enable UseLoopCounter ergonomically if on-stack-replacement is enabled
-
- Resolved
-
-
JDK-8188617 Enable UseLoopCounter ergonomically if on-stack-replacement is enabled
-
- Resolved
-
-
JDK-8190604 Enable UseLoopCounter ergonomically if on-stack-replacement is enabled
-
- Resolved
-
-
JDK-8198057 Enable UseLoopCounter ergonomically if on-stack-replacement is enabled
-
- Resolved
-