8072428: Enable UseLoopCounter ergonomically if on-stack-replacement is enabled

Set UseLoopCounter ergonomically if on-stack-replacement is enabled. Print warning.

Reviewed-by: kvn